src/main/gen/DataParser.java
// Generated from C:/1/S_expr_data/src/main/antlr/Data.g4 by ANTLR 4.13.1

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;

import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class DataParser extends Parser {
    static {
        RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    public static final int
            T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, WS = 6, NAME = 7, STRING = 8, DOUBLE = 9,
            INT = 10;
    public static final int
            RULE_calc = 0, RULE_expr = 1, RULE_expr_name = 2, RULE_attrs = 3, RULE_attr = 4,
            RULE_attr_name = 5, RULE_value = 6;

    private static String[] makeRuleNames() {
        return new String[]{
                "calc", "expr", "expr_name", "attrs", "attr", "attr_name", "value"
        };
    }

    public static final String[] ruleNames = makeRuleNames();

    private static String[] makeLiteralNames() {
        return new String[]{
                null, "'('", "')'", "'{'", "','", "'}'"
        };
    }

    private static final String[] _LITERAL_NAMES = makeLiteralNames();

    private static String[] makeSymbolicNames() {
        return new String[]{
                null, null, null, null, null, null, "WS", "NAME", "STRING", "DOUBLE",
                "INT"
        };
    }

    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "Data.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public DataParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    @SuppressWarnings("CheckReturnValue")
    public static class CalcContext extends ParserRuleContext {
        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        public TerminalNode EOF() {
            return getToken(DataParser.EOF, 0);
        }

        public CalcContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_calc;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof DataListener) ((DataListener) listener).enterCalc(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof DataListener) ((DataListener) listener).exitCalc(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof DataVisitor) return ((DataVisitor<? extends T>) visitor).visitCalc(this);
            else return visitor.visitChildren(this);
        }
    }

    public final CalcContext calc() throws RecognitionException {
        CalcContext _localctx = new CalcContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_calc);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(14);
                expr();
                setState(15);
                match(EOF);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class ExprContext extends ParserRuleContext {
        public Expr_nameContext expr_name() {
            return getRuleContext(Expr_nameContext.class, 0);
        }

        public AttrsContext attrs() {
            return getRuleContext(AttrsContext.class, 0);
        }

        public List<ExprContext> expr() {
            return getRuleContexts(ExprContext.class);
        }

        public ExprContext expr(int i) {
            return getRuleContext(ExprContext.class, i);
        }

        public ValueContext value() {
            return getRuleContext(ValueContext.class, 0);
        }

        public ExprContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_expr;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof DataListener) ((DataListener) listener).enterExpr(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof DataListener) ((DataListener) listener).exitExpr(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof DataVisitor) return ((DataVisitor<? extends T>) visitor).visitExpr(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ExprContext expr() throws RecognitionException {
        ExprContext _localctx = new ExprContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_expr);
        int _la;
        try {
            setState(39);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 2, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    {
                        setState(17);
                        match(T__0);
                        setState(18);
                        expr_name();
                        setState(19);
                        attrs();
                        setState(23);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1794L) != 0)) {
                            {
                                {
                                    setState(20);
                                    expr();
                                }
                            }
                            setState(25);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        }
                        setState(26);
                        match(T__1);
                    }
                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    {
                        setState(28);
                        match(T__0);
                        setState(29);
                        expr_name();
                        setState(33);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1794L) != 0)) {
                            {
                                {
                                    setState(30);
                                    expr();
                                }
                            }
                            setState(35);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        }
                        setState(36);
                        match(T__1);
                    }
                }
                break;
                case 3:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(38);
                    value();
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class Expr_nameContext extends ParserRuleContext {
        public TerminalNode NAME() {
            return getToken(DataParser.NAME, 0);
        }

        public Expr_nameContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_expr_name;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof DataListener) ((DataListener) listener).enterExpr_name(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof DataListener) ((DataListener) listener).exitExpr_name(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof DataVisitor) return ((DataVisitor<? extends T>) visitor).visitExpr_name(this);
            else return visitor.visitChildren(this);
        }
    }

    public final Expr_nameContext expr_name() throws RecognitionException {
        Expr_nameContext _localctx = new Expr_nameContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_expr_name);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(41);
                match(NAME);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class AttrsContext extends ParserRuleContext {
        public List<AttrContext> attr() {
            return getRuleContexts(AttrContext.class);
        }

        public AttrContext attr(int i) {
            return getRuleContext(AttrContext.class, i);
        }

        public AttrsContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_attrs;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof DataListener) ((DataListener) listener).enterAttrs(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof DataListener) ((DataListener) listener).exitAttrs(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof DataVisitor) return ((DataVisitor<? extends T>) visitor).visitAttrs(this);
            else return visitor.visitChildren(this);
        }
    }

    public final AttrsContext attrs() throws RecognitionException {
        AttrsContext _localctx = new AttrsContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_attrs);
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(43);
                match(T__2);
                setState(49);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 3, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        {
                            {
                                setState(44);
                                attr();
                                setState(45);
                                match(T__3);
                            }
                        }
                    }
                    setState(51);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 3, _ctx);
                }
                setState(52);
                attr();
                setState(53);
                match(T__4);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class AttrContext extends ParserRuleContext {
        public Attr_nameContext attr_name() {
            return getRuleContext(Attr_nameContext.class, 0);
        }

        public TerminalNode STRING() {
            return getToken(DataParser.STRING, 0);
        }

        public AttrContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_attr;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof DataListener) ((DataListener) listener).enterAttr(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof DataListener) ((DataListener) listener).exitAttr(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof DataVisitor) return ((DataVisitor<? extends T>) visitor).visitAttr(this);
            else return visitor.visitChildren(this);
        }
    }

    public final AttrContext attr() throws RecognitionException {
        AttrContext _localctx = new AttrContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_attr);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(55);
                attr_name();
                setState(56);
                match(STRING);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class Attr_nameContext extends ParserRuleContext {
        public TerminalNode NAME() {
            return getToken(DataParser.NAME, 0);
        }

        public Attr_nameContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_attr_name;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof DataListener) ((DataListener) listener).enterAttr_name(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof DataListener) ((DataListener) listener).exitAttr_name(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof DataVisitor) return ((DataVisitor<? extends T>) visitor).visitAttr_name(this);
            else return visitor.visitChildren(this);
        }
    }

    public final Attr_nameContext attr_name() throws RecognitionException {
        Attr_nameContext _localctx = new Attr_nameContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_attr_name);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(58);
                match(NAME);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class ValueContext extends ParserRuleContext {
        public TerminalNode STRING() {
            return getToken(DataParser.STRING, 0);
        }

        public TerminalNode INT() {
            return getToken(DataParser.INT, 0);
        }

        public TerminalNode DOUBLE() {
            return getToken(DataParser.DOUBLE, 0);
        }

        public ValueContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_value;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof DataListener) ((DataListener) listener).enterValue(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof DataListener) ((DataListener) listener).exitValue(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof DataVisitor) return ((DataVisitor<? extends T>) visitor).visitValue(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ValueContext value() throws RecognitionException {
        ValueContext _localctx = new ValueContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_value);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(60);
                _la = _input.LA(1);
                if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & 1792L) != 0))) {
                    _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF) matchedEOF = true;
                    _errHandler.reportMatch(this);
                    consume();
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static final ATN _ATN =
            new ATNDeserializer().deserialize(_serializedATN.toCharArray());

    static {
        _decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
        for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
            _decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
        }
    }
}